# PParser

./: CMakeLists.txt  configPaths.h  dataManager.cpp  dataManager.h  main.cpp  readme.md  utils.cpp  utils.h
components/: building.cpp  building.h  manufacturer.cpp  manufacturer.h  person.cpp  person.h  project.cpp  project.h  workshop.cpp  workshop.h
